<!--
  ~ Copyright 2017 Google, Inc.
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~     http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  ~
  -->

<resources>
    <string name="app_name">Tivi</string>

    <string name="home_nav_discover">Discover</string>
    <string name="home_nav_library">Library</string>

    <string name="discover_title">Discover</string>
    <string name="discover_trending">Watching now</string>
    <string name="discover_popular">Popular</string>

    <string name="library_followed_shows">Followed</string>
    <string name="library_watched">Watched</string>

    <string name="login">Login</string>
    <string name="header_more">More</string>

    <string name="search_menu_title">Search</string>

    <string name="settings_title">Settings</string>
    <string name="settings_ui_category_title">User Interface</string>
    <string name="settings_theme_title">Theme</string>

    <string name="settings_about_category_title">About Tivi</string>

    <string name="empty_prompt">Y u no watch some TV?</string>
    <string name="empty_emoji">😏</string>

    <string name="details_related">Related shows</string>

    <string name="percentage_format">%1$d%%</string>
    <string name="minutes_format">%1$dm</string>

    <string name="rating_content_description_format">Rating: %1$d%%</string>
    <string name="network_content_description_format">Network: %1$s</string>
    <string name="certificate_content_description_format">Certificate: %1$s</string>
    <plurals name="runtime_content_description_format">
        <item quantity="one">Runtime: %1$d minute</item>
        <item quantity="other">Runtime: %1$d minutes</item>
    </plurals>

    <string name="genre_label_drama">Drama</string>
    <string name="genre_label_fantasy">Fantasy</string>
    <string name="genre_label_science_fiction">Science Fiction</string>
    <string name="genre_label_action">Action</string>
    <string name="genre_label_adventure">Adventure</string>
    <string name="genre_label_crime">Crime</string>
    <string name="genre_label_thriller">Thriller</string>
    <string name="genre_label_comedy">Comedy</string>
    <string name="genre_label_horror">Horror</string>
    <string name="genre_label_mystery">Mystery</string>

    <string name="follow_show_add">Follow show</string>
    <string name="follow_show_remove">Un-follow show</string>

    <string name="episode_watches">Episode watches</string>

    <string name="first_aired">First aired: %1$s</string>

    <string name="season_summary_to_watch">%1$d to watch</string>
    <string name="season_summary_to_air">%1$d to air</string>
    <string name="season_summary_watched">%1$d watched</string>

    <string name="popup_season_watch_now">Watch date: now</string>
    <string name="popup_season_watch_air_date">Watch date: air date</string>

    <string name="popup_season_mark_watched_all">Watch all</string>
    <string name="popup_season_mark_watched_aired">Watch aired</string>
    <string name="popup_season_mark_all_unwatched">Unwatch all</string>

    <string name="popup_season_follow">Follow season</string>
    <string name="popup_season_ignore">Ignore season</string>
    <string name="popup_season_ignore_previous">Ignore previous seasons</string>

    <string name="popup_sort_super">Supersort</string>
    <string name="popup_sort_last_watched">Last watched</string>
    <string name="popup_sort_date_followed">Date followed</string>
    <string name="popup_sort_alpha">A-Z</string>

    <string name="show_details_seasons">Seasons</string>
    <string name="view_privacy_policy">View Privacy Policy</string>

    <string name="not_known_title">TBD</string>

    <string name="library_last_watched">Last watched:</string>

    <string name="next_prefix">Next: %s</string>
    <string name="filter_shows">Filter shows</string>

    <plurals name="header_show_count">
        <item quantity="one">%d show</item>
        <item quantity="other">%d shows</item>
    </plurals>

    <string name="episode_number">#%d</string>

    <plurals name="header_show_count_filtered">
        <item quantity="one">%d show &lt;small>(filtered)&lt;/small></item>
        <item quantity="other">%d shows &lt;small>(filtered)&lt;/small></item>
    </plurals>

    <string name="followed_watch_stats_to_watch">&lt;b>%d&lt;/b> to watch</string>
    <string name="followed_watch_stats_complete">Watched all</string>

    <string name="menu_refresh">Refresh</string>

    <string name="privacy_policy_url" translatable="false">https://chrisbanes.github.io/tivi/privacypolicy.html</string>
    <string name="settings_app_version">Version</string>
    <string name="settings_app_version_summary">v%s (%d)</string>

</resources>
