<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright 2018 Google, Inc.
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~     http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/season_mark_watched_aired"
        android:title="@string/popup_season_mark_watched_aired">
        <menu>
            <item
                android:id="@+id/season_mark_aired_watched_air_date"
                android:title="@string/popup_season_watch_air_date" />
            <item
                android:id="@+id/season_mark_aired_watched_now"
                android:title="@string/popup_season_watch_now" />
        </menu>
    </item>

    <item
        android:id="@+id/season_mark_watched_all"
        android:title="@string/popup_season_mark_watched_all">
        <menu>
            <item
                android:id="@+id/season_mark_all_watched_air_date"
                android:title="@string/popup_season_watch_air_date" />
            <item
                android:id="@+id/season_mark_all_watched_now"
                android:title="@string/popup_season_watch_now" />
        </menu>
    </item>

    <item
        android:id="@+id/season_mark_all_unwatched"
        android:title="@string/popup_season_mark_all_unwatched" />
</menu>