<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright 2017 Google, Inc.
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~     http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  ~
  -->

<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/home_menu_user_login"
        android:icon="@drawable/ic_person_outline"
        android:title="@string/login"
        app:showAsAction="always" />

    <item
        android:id="@+id/home_menu_user_avatar"
        android:icon="@drawable/ic_person"
        android:visible="false"
        app:showAsAction="always" />

    <item
        android:id="@+id/home_settings"
        android:title="@string/settings_title"
        app:showAsAction="never" />

    <item
        android:id="@+id/home_privacy_policy"
        android:title="@string/view_privacy_policy"
        app:showAsAction="never" />

</menu>